NHBK-34 Item template editor working again, need some polish and add paddin on main menu, and fix bug on firefox

--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -1,5 +1,7 @@
 md-sidenav {
     min-width: 15%;
+    padding-left: 20px;
+    padding-right: 20px;
 
     [md-button] {
         width: 100%;
