--- a/src/app/group/group.component.scss
+++ b/src/app/group/group.component.scss
@@ -45,7 +45,7 @@
     md-card {
         flex-shrink: 0;
         flex-grow: 1;
-        flex-basis: 0;
+        flex-basis: 200px;
     }
 }
 
