--- a/src/app/item/item-template-editor.component.scss
+++ b/src/app/item/item-template-editor.component.scss
@@ -20,3 +20,6 @@ md-card {
         flex: 0 auto;
     }
 }
+
+.section-list {
+}
